--- a/api/.env
+++ b/api/.env
@@ -10,7 +10,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=db
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=bookapi
 DB_USERNAME=app
